# lightning-libauc-text-classification

./: LICENSE  README.md  pyproject.toml  requirements.txt
lightning_libauc/: experiment.py  textdataset.py  trainer.py
