[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libauc_lightning"
version = "0.0.1"
authors = [
    { name="Shantanu Thorat"},
]
description = "LibAUC training library for binary text classifiction"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "torch",
    "transformers",
    "libauc",
    "scikit-learn"
]
license = {text = "MIT"}


